--- a/random/prezentacija/package.json
+++ b/random/prezentacija/package.json
@@ -40,5 +40,8 @@
     "node-sass": "^4.13.1",
     "socket.io": "^2.2.0"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "tsc": "^1.20150623.0"
+  }
 }
